--- a/pages/projects/index.module.scss
+++ b/pages/projects/index.module.scss
@@ -25,6 +25,7 @@
         left: 2.604vw;
         bottom: 3.125vw;
         color: white;
+        z-index: 1000;
         h4 {
           font-family: Montserrat-Regular;
           font-size: 2.5vw;
