--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 6.25vw;
+  height: 3.90625vw;
   display: flex;
   align-items: center;
   padding-left: 3.646vw;
@@ -14,6 +14,7 @@
     padding: 0;
     list-style: none;
     display: flex;
+    align-items: center;
     li:first-child {
       margin-left: 4.427vw;
     }
@@ -24,40 +25,45 @@
       margin-left: 9.115vw;
       a {
         color: white;
-        font-size: 1.5625vw;
+        font-size: 14px;
         font-family: Montserrat-Regular;
       }
     }
   }
+  .video {
+    height: 2.667vw;
+    transform: scale(3.5);
+    background-color: transparent;
+  }
 }
 
 .footer {
-  padding: 2.604vw 15.625vw;
+  padding: 2.604vw 3.125vw;
   display: flex;
   color: white;
-  border-top: 1px solid #808080;
   > div {
     flex: 1;
     a {
       color: white;
       font-family: Montserrat-Regular;
-      font-size: 1.5625vw;
+      font-size: 14px;
     }
   }
   > div:nth-child(1) {
     text-align: left;
     div {
-      margin-top: 2.34375vw;
+      margin-top: 20px;
     }
   }
   > div:nth-child(2) {
+    div {
+      float: right;
+      width: 120px;
+    }
     text-align: center;
-  }
-  > div:nth-child(3) {
-    text-align: right;
     p {
       margin-top: 2.34375vw;
-      font-size: 1.5625vw;
+      font-size: 14px;
       font-family: Montserrat-Regular;
     }
     div:last-child {
@@ -66,4 +72,8 @@
       float: right;
     }
   }
+}
+
+.main {
+  margin-top: 3.90625vw;
 }
