--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -1,27 +1,108 @@
 .container {
-  padding-top: 17.448vw;
-  color: white;
-  text-align: center;
-  .description {
-    margin-top: 3.75vw;
-    margin-bottom: 9.583vw;
+  .bannerWrap {
+    position: relative;
+    .bannerDes {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      color: white;
+      padding-left: 3.125vw;
+      padding-right: 1.5625vw;
+      padding-bottom: 3.125vw;
+      width: 100%;
+      display: flex;
+      > div {
+        flex: 1;
+      }
+      .left {
+        h3 {
+          font-size: 2.34375vw;
+        }
+        p {
+          margin-top: 0.521vw;
+        }
+      }
+      .right {
+        div {
+          width: 200px;
+          float: right;
+          p:not(:last-child) {
+            &::after {
+              content: '';
+              display: block;
+              height: 2px;
+              width: 100%;
+              background-color: white;
+              animation: goWidth 1s;
+              margin-top: 5px;
+            }
+          }
+          p {
+            margin-top: 15px;
+          }
+        }
+      }
+    }
   }
-  p {
-    font-family: Montserrat-Light;
-    font-size: 1.25vw;
+  .bannerItem {
+    margin-top: 20px;
+    display: flex;
+    > div {
+      flex: 1;
+      font-size: 0;
+    }
+    > div.content {
+      display: flex;
+      align-items: center;
+      > div {
+        z-index: 10;
+        color: white;
+        h3 {
+          margin-bottom: 2.083vw;
+        }
+        p {
+          font-size: 18px;
+        }
+      }
+      div.left {
+        padding: 2.385vw 2.083vw;
+        background-color: black;
+        position: relative;
+        left: 7.292vw;
+      }
+      div.right {
+        padding: 2.385vw 2.083vw;
+        background-color: black;
+        position: relative;
+        right: 7.292vw;
+      }
+    }
   }
-  .companyWrap {
-    padding-top: 8.49vw;
-    .philosophy {
-      margin-top: 4.271vw;
+  .aboutWrap {
+    margin-top: 40px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10.417vw;
+    > div {
+      display: inline-block;
+      width: 49.271vw;
+      margin: 0 auto;
+      h3 {
+        margin-bottom: 2.604vw;
+      }
+      p {
+        margin-bottom: 10px;
+      }
     }
   }
   .customers {
-    padding-top: 8.333vw;
+    padding-top: 4.167vw;
     padding-bottom: 5.208vw;
     background-color: #121212;
+    color: white;
     h3 {
-      margin-bottom: 8.333vw;
+      text-align: center;
     }
     ul {
       display: flex;
@@ -32,14 +113,20 @@
         width: 20vw;
         height: 15vw;
       }
-      li:not(:last-child) {
-        border-right: 1px solid #202020;
-      }
     }
-    .ul1 {
-      li {
-        border-bottom: 1px solid #202020;
+    .more {
+      text-align: right;
+      margin-top: 2.604vw;
+      a {
+        color: white;
+        margin-right: 4.6875vw;
       }
     }
   }
+}
+
+@keyframes goWidth
+{
+  from {width: 0;}
+  to {width: 100%;}
 }
