style: modified font size

--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -26,6 +26,7 @@
       a {
         color: white;
         font-size: 14px;
+        font-weight: bold;
         font-family: Montserrat-Regular;
       }
     }
@@ -68,7 +69,7 @@
     }
     div:last-child {
       margin-top: 2.34375vw;
-      width: 11.354vw;
+      width: 140px;
       float: right;
     }
   }
