--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -16,15 +16,17 @@
       }
       .left {
         h3 {
-          font-size: 2.34375vw;
+          font-size: 45px;
         }
         p {
+          font-size: 22px;
           margin-top: 0.521vw;
+          font-family: Montserrat-Regular;
         }
       }
       .right {
         div {
-          width: 200px;
+          width: 240px;
           float: right;
           p:not(:last-child) {
             &::after {
@@ -39,6 +41,9 @@
           }
           p {
             margin-top: 15px;
+            span {
+              font-size: 22px;
+            }
           }
         }
       }
@@ -58,6 +63,7 @@
         z-index: 10;
         color: white;
         h3 {
+          font-size: 28px;
           margin-bottom: 2.083vw;
         }
         p {
@@ -89,6 +95,7 @@
       width: 49.271vw;
       margin: 0 auto;
       h3 {
+        font-size: 28px;
         margin-bottom: 2.604vw;
       }
       p {
@@ -96,12 +103,13 @@
       }
     }
   }
-  .customers {
+  .portfolio {
     padding-top: 4.167vw;
     padding-bottom: 5.208vw;
     background-color: #121212;
     color: white;
     h3 {
+      font-size: 45px;
       text-align: center;
     }
     ul {
