--- a/pages/contact/index.module.scss
+++ b/pages/contact/index.module.scss
@@ -7,6 +7,9 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
+      h3 {
+        font-size: 45px !important;
+      }
     }
     .span {
       margin-left: 32px;
@@ -22,13 +25,14 @@
     padding: 13.021vw 15.625vw;
     display: flex;
     .touch {
-      font-size: 1.458vw;
+      font-size: 28px;
       color: white;
     }
     .contact {
       width: 20.833vw;
       margin-right: 8.854vw;
       .work {
+        font-size: 24px;
         margin-top: 2.604vw;
         color: #c6c6c6;
       }
@@ -41,6 +45,7 @@
         .email {
           color: #c6c6c6;
           margin-left: 30px;
+          font-size: 20px;
         }
       }
     }
@@ -55,7 +60,7 @@
           background-color: transparent;
           border: none;
           outline: none;
-          font-size: 1.458vw;
+          font-size: 24px;
           color: white;
           padding: 1.042vw 0;
           border-bottom: 1px solid #535353;
@@ -67,7 +72,7 @@
       }
       textarea {
         margin-top: 2.604vw;
-        font-size: 1.458vw;
+        font-size: 24px;
         height: 10.417vw;
         border: none;
         outline: none;
@@ -83,14 +88,14 @@
       }
       button {
         margin-top: 30px;
-        height: 40px;
+        height: 50px;
         width: 100%;
         border-radius: 14px;
         outline: none;
         border: none;
         color: white;
         background-color: #8a8de7;
-        font-size: 16px;
+        font-size: 24px;
       }
     }
     .media {
