--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -67,7 +67,8 @@
           margin-bottom: 2.083vw;
         }
         p {
-          font-size: 18px;
+          font-size: 16px;
+          font-family: Montserrat-Regular;
         }
       }
       div.left {
