--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -101,6 +101,8 @@
       }
       p {
         margin-bottom: 10px;
+        font-size: 16px;
+        font-family: Montserrat-Regular;
       }
     }
   }
