--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -76,6 +76,7 @@
         background-color: black;
         position: relative;
         left: 7.292vw;
+        text-align: right;
       }
       div.right {
         padding: 2.385vw 2.083vw;
