--- a/components/Layout/index.module.scss
+++ b/components/Layout/index.module.scss
@@ -3,12 +3,13 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 3.90625vw;
+  height: 68px;
   display: flex;
   align-items: center;
   padding-left: 3.646vw;
   background-color: rgba(0, 0, 0, 1);
   z-index: 9999;
+  width: 100%;
   ul {
     margin: 0;
     padding: 0;
